--- a/index.html
+++ b/index.html
@@ -11,12 +11,32 @@
 <body>
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
+        <div class="conteudo">
         <div class="botoes">
             <button class="botao ativo">Linguagens de programação</button>
-            <button class="botao">Ser aprovado no 3o ano</button>
+            <button class="botao">3o ano</button>
             <button class="botao">Aprender Françês</button>
             <button class="botao">Ler livros</button>
         </div>
+        <div class="abas-textos">
+            <div class="aba-conteudo ativo">
+                <h3 class="aba-conteudo-titulo-principal">Aprender C++, SQL, Python ou Java.</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Ser aprovado no 3o ano</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Aprender françês básico</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Ler 3 livros</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar objetivo</h4>
+            </div>
+        </div>
+    </div> 
     </section>
     <script src="main.js"></script>
     
